	          skel/proj/page.kahua
	          skel/proj/parts-collection.kahua
	          skel/proj/pcont-page.kahua
	          skel/proj/session.kahua
	          skel/proj/slot-acl-base.kahua
	          skel/proj/utility.kahua
	          skel/proj/validator.kahua
	* Change: skel/proj/proj.kahua
	  rewrite hello level simple code.
	* Change: src/kahua-package.scm
	  catch up skel's change.
	
2006-12-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* New: doc/Scripts/*.txt
	  English documents.

2006-12-27  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: skel/configure.ac
	  remove nobsun@kahua.org literal email address.

2006-12-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* Update: doc/Modules/kahua.test.worker.ja,
	  doc/Modules/kahua.test.xml.ja

	* New: doc/Modules/kahua.xml-template.ja

	* Change: skel/configure.ac, skel/Makefile.in
	  Now skelton have --with-site-bundle configure option.
	  Fix some old style installation target.

	* New: examples/configure.ac
	  Separate configure script of examples. It's to support
	  installation into a site bundle.

2006-12-26  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/persistence.scm
	  kahua-indexable-object? is predicate that return #t
	  if a argument is able to use as index value, or #f.

	* Change: src/kahua/elem.scm
	  Export define-basic-element and define-elements.
	  Drop pdf/ and pdf:.
	  Add node-list->node-set

	* Update: doc/Modules/*
	  kahua.config.ja, kahua.server.ja, kahua.persistence.ja,
	  kahua.ja, kahua.partcont.ja, kahua.elem.ja, kahua.user.ja,
	  kahua.plugin.ja, kahua.util.ja, kahua.developer.ja,
	  kahua.gsid.ja, kahua.sandbox.ja, kahua.session.ja

2006-12-25  Katsutoshi Itoh <cut-sea@kahua.org>

	* Change: src/kahua-install.scm
	  Add New material-type as "template",which is
	  for install XML kahua template files.
	* Fix: skel/Makefile.in
	  fix bug at kahua-package generate project's test.
	  and fix proj-start,proj-stop install directory.
	* Change: skel/proj/default.kahua