@@ -1,6 +1,6 @@
 ;; -*- coding: euc-jp; mode: scheme -*-
 ;; test %%_PROJECT_NAME_%% script.
-;; $Id: test.scm.in,v 1.3 2006/08/14 02:07:30 cut-sea Exp $
+;; $Id: test.scm.in,v 1.4 2006/12/25 18:34:01 cut-sea Exp $
 
 (use gauche.test)
 (use file.util)
@@ -22,8 +22,11 @@
 (sys-mkdir "_tmp" #o755)
 (sys-mkdir "_work" #o755)
 (sys-mkdir "_work/plugins" #o755)
+(sys-mkdir "_work/templates" #o755)
+(sys-mkdir "_work/templates/%%_PROJECT_NAME_%%" #o755)
 
 (copy-file "../plugins/%%_PROJECT_NAME_%%.scm"  "_work/plugins/%%_PROJECT_NAME_%%.scm")
+(copy-file "../templates/page.xml"  "_work/templates/%%_PROJECT_NAME_%%/page.xml")
 
 (kahua-init *config*)
 
