@@ -14,6 +14,9 @@
 	  rewrite hello level simple code.
 	* Change: src/kahua-package.scm
 	  catch up skel's change.
+	* Change: skel/test/test.scm.in
+	          skel/templates/page.xml
+	  modify sample code using page template file.
 	
 2006-12-27  Tatsuya BIZENN  <bizenn@arthub.net>
 
